I tried adding movement to the entities. Something is working, but incorrectly.