@@ -2,7 +2,10 @@ package Entities;
 
 import Utils.Coordinates;
 import Utils.CoordinatesShift;
+import Utils.GameMap;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 public class Herbivore extends Creature {
@@ -14,6 +17,16 @@ public class Herbivore extends Creature {
 
     @Override
     public Set<CoordinatesShift> getEntityMoves() {
-        return Set.of();
+        return new HashSet<>(Arrays.asList(
+                new CoordinatesShift(1 ,0),
+                new CoordinatesShift(-1, 0),
+                new CoordinatesShift(0, 1),
+                new CoordinatesShift(0, -1)
+        ));
+    }
+
+    @Override
+    protected boolean isSquareAvailableForMove(Coordinates coordinates, GameMap map) {
+        return map.getEntity(coordinates).getClass() != Predator.class;
     }
 }
