@@ -2,7 +2,10 @@ package Entities;
 
 import Utils.Coordinates;
 import Utils.CoordinatesShift;
+import Utils.GameMap;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 public class Predator extends Creature {
@@ -14,7 +17,17 @@ public class Predator extends Creature {
     public Predator() {}
 
     @Override
+    protected boolean isSquareAvailableForMove(Coordinates coordinates, GameMap map) {
+        return map.isSquareEmpty(coordinates);
+    }
+
+    @Override
     public Set<CoordinatesShift> getEntityMoves() {
-        return Set.of();
+        return new HashSet<>(Arrays.asList(
+                new CoordinatesShift(1 ,0),
+                new CoordinatesShift(-1, 0),
+                new CoordinatesShift(0, 1),
+                new CoordinatesShift(0, -1)
+        ));
     }
 }
